# singaporeBusService

./: .env.example  .env.production.example  .env.production.shared.example  .gitignore  AI_API_QUICK_REFERENCE.md  BACKUP_AND_RECOVERY.md  DEPLOYMENT.md  Dockerfile  FAVORITE_LOGIC_CONFIRMATION.md  FRONTEND_HANDOFF.md  FRONTEND_STATIC_DATA_MIGRATION.md  GITHUB_ACTIONS_SETUP.md  README.md  RELEASE_RUNBOOK.md  SERVER_ADJUSTMENT_FROM_AI_SPEC.md  SERVER_BASELINE.md  STATIC_DATA_SYNC_DESIGN.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  singapore_bus_backend_design_for_codex.docx  singapore_bus_backend_design_for_codex.md
.github/workflows/: README.md  release-prod.yml
app/: main.py
app/api/: deps.py
app/clients/: lta_client.py
app/core/: cache.py  config.py  database.py  errors.py  logging.py
app/models/: __init__.py  bus_route.py  bus_service.py  bus_stop.py  bus_stop_alias.py  favorite.py  feedback.py  static_data_state.py  user.py
app/schemas/: arrival.py  bus_stop.py  common.py  favorite.py  feedback.py  home.py  static_data.py
app/utils/: geo.py  (+2 more)
migrations/: env.py
nginx/: reverse-proxy-template.conf  singapore-bus-service.conf
scripts/: connect_vps.ps1  deploy_prod.sh  load_test_arrivals.py  release_prod.sh  start_api.cmd
tests/: conftest.py  test_aliases.py  test_api.py  test_arrivals.py  test_bus_stops.py  test_compose_timezone.py  test_favorites.py  test_feedback.py  test_normalizers.py  test_operating.py  test_ops_logs.py  test_request_logging.py  test_retention.py  test_scheduler.py  test_static_data.py  test_sync_lta_data.py
(+44 files in other folders)
